--- a/style.css
+++ b/style.css
@@ -1,17 +1,146 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'poppins', sans-serif;
+}
+
+
 body{
-    background-image: url(https://trecobox.com.br/wp-content/uploads/2018/10/playstation-campanha-spirit-day-lgbt.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: rgb(255, 255, 255);
     display: grid;
-    grid-template-areas: 
-         "cabe cabe cabe"
-         "corp corp corp"
-         "corp corp corp";
+    grid-template-areas:  
+    "cabe cabe cabe"
+    "brac corp corp"
+    "pern pern pern";
+    background-image: url(https://i0.wp.com/gamehall.com.br/wp-content/uploads/2019/10/sony-playstation-logo.png?fit=920%2C518&ssl=1);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
+   background: url(736059.png) no-repeat;
+   background-position: center;
+   background-size: cover;
+}
+
+.form-box{
+    position: relative;
+    width: 400px;
+    height: 450px;
+    background: rgba(255, 0, 0, 0);
+    border: 2px solid #000000;
+    border-radius: 40PX;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h2{
+    font-size: 2em;
+    color: #000000;
+    text-align: center;
+}
+.input-box{
+    position: relative;
+    margin: 30px 0;
+    width: 310px;
+    border-bottom:2px solid #000000 ;
+}
+
+.input-box label{
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  color: hsl(0, 0%, 100%,0%, 100%);
+  font-size: 1em;
+  pointer-events: none;
+ transition: 0.5s; ;
+ align-items: center;
+}
+
+input:focus ~ label,
+input:focus ~ :valid{
+    top: -5%;
+}
+
+
+.input-box input{
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    padding: 0 35px 0 5px ;
+    color: #0ca397;
+}
+.input-box ion-icon{
+    position: absolute;
+    right: 8px;
+    color: #fffdfd;
+    font-size: 1.2em;
+    top: 20px;
+}
+
+.forget{
+    gap: 50%;
+   margin: -15px 0 15px;
+   font-size: .9em;
+   color: #000000;
+   justify-content: center;
+}
+
+.forget label input{
+    margin-right: 3p;
+}
+
+.forget label a{
+    color: #ffffff;
+    text-decoration: none;
+}
+.forget a:hover{
+    text-decoration: underline;
+}
+
+button{
+    width: 100%;
+    height: 40px;
+    border-radius: 40px;
+    background: #00000056;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 600;
+}
+
+.registro{
+    font-size: .9em;
+    color: #000000;
+    text-align: center;
+    margin: 25px 0 10px;
+}
+
+.registro p a{
+    text-decoration: none;
+    color: #2fa003;
+    font-weight: 600;
+}
+
+.registro p a:hover{
+    text-decoration: underline;
 }
 
 .cabeca{
-   grid-area: cabe;
+    grid-area: cabe;
+    text-align: center;
+    border-radius: 20px;
+    border: 2px solid black;
 }
 
 .braco{
@@ -24,4 +153,35 @@ body{
 
 .perna{
     grid-area: pern;
+    text-align: center;
+    border-radius: 20px;
+    border: 2px solid black; 
+}
+
+.img2{
+    width: 200px;
+    height: 200px;
+    border-radius: 20px;
+}
+
+.pai{
+    width: 20%;
+    height: 20%;
+}
+
+.letra{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+}
+
+.butao{
+    width: 190px;
+    height: 40px;
+    border-radius: 20px;
+}
+
+
+.buton{
+        border-radius: 20px;
+        width: 50px;
 }
